# jumpstone

./: .gitignore  BRAIN.txt  BRIEF.md  ENV_SETUP.md  README.md
.github/workflows/: rust-ci.yml
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
backend/crates/core/: Cargo.toml
backend/crates/core/src/: event.rs  lib.rs  messaging.rs
backend/crates/crypto/: Cargo.toml
backend/crates/crypto/src/: lib.rs
backend/crates/media/: Cargo.toml
backend/crates/media/src/: lib.rs
backend/crates/server/: Cargo.toml
backend/crates/server/src/: config.rs  federation.rs  main.rs  messaging.rs  metrics.rs  mls.rs  session.rs  users.rs
backend/crates/sfu-client/: Cargo.toml
backend/crates/sfu-client/src/: lib.rs
backend/crates/storage/: Cargo.toml
backend/crates/storage/src/: lib.rs  messaging.rs  mls.rs  refresh.rs  session.rs  user.rs
backend/migrations/: 0001_initial.sql  0002_create_sessions.sql  0002_messaging.sql  0003_create_users.sql  0004_create_mls_key_packages.sql  0004_create_users.sql  0005_refresh_sessions.sql  0006_roles_and_memberships.sql  0007_channel_read_state.sql  README.md
backend/xtask/: Cargo.toml
backend/xtask/src/: main.rs
deploy/: docker-compose.yml
deploy/observability/: prometheus.yml
docs/: AGENTS.md  API.md  CI_PLAN.md  FRONTEND_TIMELINE.md  OBSERVABILITY.md  OPERATIONS.md  PROTOCOL.md  ROADMAP.md  SETUP.md  TESTING.md  THREATMODEL.md  TIMELINE.md  UI_SYSTEM.md
frontend/: .env.example  .eslintrc.cjs  .gitignore  README.md  bun.lockb  eslint.config.mjs  eslint.config.ts  index.html  lighthouse.budgets.json  nuxt.config.ts  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend-nuxt/: README.md  tsconfig.json  vitest.config.ts
frontend-nuxt/app/layouts/: auth.vue  default.vue
frontend-nuxt/app/middleware/: auth.global.ts
frontend-nuxt/app/pages/: roadmap.vue  styleguide.vue
frontend-nuxt/app/plugins/: api-client.ts  session.client.ts
frontend-nuxt/app/stores/: channels.ts  guilds.ts  session.ts  system.ts
frontend-nuxt/app/types/: api.ts  session.ts
frontend-nuxt/app/utils/: errors.ts
frontend-nuxt/tests/: channels.store.test.ts
frontend-nuxt/types/: nuxt-ui.d.ts  nuxt.d.ts
frontend/.storybook/: main.ts  preview.ts
frontend/app/: app.config.ts  app.vue
frontend/app/composables/: useApiClient.ts
frontend/app/layouts/: default.vue
frontend/app/middleware/: auth.global.ts
frontend/app/pages/: index.vue  login.vue
frontend/app/plugins/: session.client.ts
frontend/app/stores/: channels.ts  guilds.ts  session.ts  system.ts
frontend/app/types/: session.ts
frontend/assets/css/: tailwind.css
frontend/components/layout/: AppShell.vue
frontend/components/ui/: Avatar.vue  Badge.vue  Button.vue  Input.vue  Tooltip.vue
frontend/pages/: index.vue
frontend/scripts/: sync-backend-types.mjs
frontend/src/: App.vue  main.ts
frontend/src/composables/: useApiClient.ts
frontend/src/config/: features.ts  runtime.ts
frontend/src/layouts/: AuthLayout.vue  DefaultLayout.vue  MessagesLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: channels.ts  connectivity.ts  devices.ts  federation.ts  guilds.ts  messages.ts  mls.ts  notifications.ts  reactions.ts  realtime.ts  search.ts  session.ts  system.ts  timeline.ts
frontend/src/types/: messaging.ts  session.ts  ui.ts
frontend/src/utils/: device.ts  errors.ts  (+3 more)
frontend/stores/: session.ts
frontend/tests/: accessibility.test.ts  api-client.test.ts  channels.store.test.ts  guilds.store.test.ts
frontend/types/: nuxt.d.ts
(+62 files in other folders)
