[package]
name = "openguild-server"
version = "0.0.1"
edition = "2021"
description = "HTTP and WebSocket gateway for the OpenGuild homeserver"
license = "AGPL-3.0-or-later"

[features]
default = []
metrics = []

[dependencies]
openguild-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
axum = "0.7"
tokio = { version = "1.38", features = ["full"] }
config = "0.14"
thiserror = "1.0"

[dev-dependencies]
serial_test = "2"
tower = { version = "0.4", features = ["util"] }
once_cell = "1"
