[package]
name = "openguild-server"
version = "0.0.1"
edition = "2021"
description = "HTTP and WebSocket gateway for the OpenGuild homeserver"
license = "AGPL-3.0-or-later"

[features]
default = []
metrics = ["dep:prometheus"]

[dependencies]
openguild-core = { path = "../core" }
openguild-storage = { path = "../storage" }
openguild-crypto = { path = "../crypto" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
axum = "0.7"
tokio = { version = "1.38", features = ["full"] }
config = "0.14"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
prometheus = { version = "0.13", optional = true }
async-trait = "0.1"
base64 = { version = "0.22", default-features = false, features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
serial_test = "2"
tower = { version = "0.4", features = ["util"] }
once_cell = "1"
