[package]
name = "openguild-storage"
version = "0.0.1"
edition = "2021"
description = "Persistence layer for OpenGuild homeserver"
license = "AGPL-3.0-or-later"

[dependencies]
openguild-core = { path = "../core" }
anyhow = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
serde_json = "1.0"
argon2 = "0.5"
pwhash = { package = "password-hash", version = "0.5", features = ["rand_core"] }
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
